[package]
name = "toxisyscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
libc = "0.2"
procfs = "0.15.1"
clap = { version = "4.1", features = ["derive"] }
syscalls = { path = "../syscalls" }
num-traits = "0.2"
num-derive = "0.3"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.10"
test-log = "0.2.11"
